# llm-evaluator

./: .dockerignore  .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: golden_dataset.json
src/: config.py  dashboard.py  ingest.py  judger.py  models.py  pipeline.py  retry.py  target.py  telemetry.py  websearch.py
