[project]
name = "llm-evaluator"
version = "0.1.0"
description = "LLM-as-a-Judge evaluation framework for agentic coding sandbox"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.70,<2.0",
    "httpx>=0.28,<1.0",
    "streamlit>=1.42,<2.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "langsmith>=0.3,<1.0",
    "tavily-python>=0.5,<1.0",
    "pandas>=2.0,<3.0",
    "plotly>=5.24,<6.0",
]
